--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,5 +32,5 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   },
- "proxy": "https://localhost:7269"
+  "proxy": "http://localhost:5001"
 }
