--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
@@ -32,5 +33,5 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   },
-  "proxy": "http://localhost:5001"
+  "proxy": "https://localhost:5001"
 }
